[metadata]
name = empanada-dl

author = Ryan Conrad
author_email = conradrw@nih.gov
url = https://github.com/volume-em/empanada
license = BSD-3-Clause
description = Algorithms for Panoptic Segmentation of organelles in EM
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/volume-em/empanada/issues
    Documentation = https://github.com/volume-em/empanada#README.md
    Source Code = https://github.com/volume-em/empanada
    User Support = https://github.com/volume-em/empanada/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    torch>=1.10
    torchvision>=0.2
    numpy==1.22
    numba>=0.54
    zarr>=2.12
    opencv-python>=4.5.3
    scikit-image>=0.19
    albumentations>=1.2
    volumentations-3D>=1.0.4
    networkx>=2.8.7
    dask>=2022.5.2
    connected-components-3d>=3.10
    matplotlib
    pyyaml
    cztile
    imagecodecs
    tqdm

[options.extras_require]
all =
    mlflow
    simpleitk
    imagehash
